--- a/modules/details/client/view/component/detailsComponent.jade
+++ b/modules/details/client/view/component/detailsComponent.jade
@@ -1,9 +1,9 @@
 div.details
     div.details-content
         div#ceremony-info
-            p.details-title CEREMONY
+            p.details-title 仪式详情
                 .details-left
-                    p.left.details-h2 Location
+                    p.left.details-h2 位置
                         p.left The ceremony will be held at a beachfront residence in Useless Bay on Whidbey Island. Parking will be provided off-site, and full details including the event address and directions will be included with the RSVP confirmation.
                 .details-right
                     p.left.details-h2 Driving & Parking
