--- a/modules/home/client/view/component/homeComponent.jade
+++ b/modules/home/client/view/component/homeComponent.jade
@@ -1,5 +1,5 @@
 .home
     //.home-background
     
-    p.name Mackenzie & Jonathan
-    p.date July 13th, 2014
+    p.name 姚琳 & 师超鹏
+    p.date 4月 26日, 2015
