--- a/modules/main/client/view/index.jade
+++ b/modules/main/client/view/index.jade
@@ -4,17 +4,17 @@ block content
     .navigation
         ul
             li.nav-item.first-nav-item
-              a(href="#/home") HOME
+              a(href="#/home") 首页
             li.nav-item.non-first-nav-item
-              a(href="#/story") OUR STORY
+              a(href="#/story") 我们的故事
             li.nav-item.non-first-nav-item
-              a(href="#/gallery") GALLERY
+              a(href="#/gallery") 相册
             li.nav-item.non-first-nav-item
-              a(href="#/details") CEREMONY
+              a(href="#/details") 仪式
             li.nav-item.non-first-nav-item
-              a(href="#/rsvp") RSVP
+              a(href="#/rsvp") 敬请辞复
             li.nav-item.non-first-nav-item
-              a(href="#/registry") REGISTRY
+              a(href="#/registry") 赞助
 
     .nav-spacer
 
