--- a/modules/main/client/view/layout.jade
+++ b/modules/main/client/view/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html(ng-app="mackenzieAndJonathanPyke")
   head
-    title Mackenzie & Jonathan Pyke
+    title 姚琳 &  师超鹏
     
     link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', href='css/main.css')
