翻译一小部分内容,测试部署阿里云环境

--- a/modules/details/client/view/component/detailsComponent.jade
+++ b/modules/details/client/view/component/detailsComponent.jade
@@ -4,10 +4,14 @@ div.details
             p.details-title 仪式详情
                 .details-left
                     p.left.details-h2 位置
-                        p.left The ceremony will be held at a beachfront residence in Useless Bay on Whidbey Island. Parking will be provided off-site, and full details including the event address and directions will be included with the RSVP confirmation.
+                        p.left 婚礼在介休市张兰镇史村举办.
+                        a(
+                            href='http://j.map.baidu.com/pbSZ0' 
+                            target='blank'
+                        )查看地图
                 .details-right
-                    p.left.details-h2 Driving & Parking
-                        p.left Please allow extra time for ferry traffic. It is recommended to plan on missing one ferry due to over-crowding.
+                    p.left.details-h2 注意事项
+                        p.left 由于路不好找,请大家留出足够的时间在交通上,特别困难可以提前到我家,一定款待各位.
 
 
     div.details-content
