完成我们的故事

--- a/modules/details/client/view/component/detailsComponent.jade
+++ b/modules/details/client/view/component/detailsComponent.jade
@@ -16,7 +16,7 @@ div.details
 
     div.details-content
         div#entourage
-            p.details-title ENTOURAGE
+            p.details-title 联系我们
                 .details-left
                     p.details-details Bridesmaids
                     ul
