--- a/modules/registry/client/view/component/registryComponent.jade
+++ b/modules/registry/client/view/component/registryComponent.jade
@@ -1,6 +1,6 @@
 div.registry
     div.text-container
-        a.registry-link(href="http://www.amazon.com/registry/wedding/1DT96M2C0M68N", target="_blank")
-            img(src="images/registry/amazon.jpg")
-        a.registry-link(href="http://www1.macys.com/registry/wedding/guest/?registryId=6125791", target="_blank")
-            img(src="images/registry/macys.gif")
+        a.registry-link(href="https://www.alipay.com/", target="_blank")
+            img(src="images/registry/alipay.png")
+        a.registry-link(href="#", target="_blank")
+            img(src="images/registry/wx.png")
