--- a/modules/main/client/view/index.jade
+++ b/modules/main/client/view/index.jade
@@ -14,7 +14,7 @@ block content
             li.nav-item.non-first-nav-item
               a(href="#/rsvp") 敬请辞复
             li.nav-item.non-first-nav-item
-              a(href="#/registry") 回不来?
+              a(href="#/registry") 来不了
 
     .nav-spacer
 
