--- a/modules/registry/client/view/component/registryComponent.jade
+++ b/modules/registry/client/view/component/registryComponent.jade
@@ -4,3 +4,5 @@ div.registry
             img(src="images/registry/alipay.png")
         a.registry-link(href="#", target="_blank")
             img(src="images/registry/wx.png")
+        a.registry-link(href="#", target="_blank")
+            img(src="images/registry/mp_wx.png")    
