update submit btn

--- a/modules/rsvp/client/view/component/rsvpComponent.jade
+++ b/modules/rsvp/client/view/component/rsvpComponent.jade
@@ -42,7 +42,7 @@ div.rsvp
                             br
                             input#address(type="text", placeholder="现在的工作地址")
                             br
-                    input#submitbt.submit(type="submit", value="回复")
+                    input#submitbt.submit(type="submit", value="提交")
         div.rsvp-text
             h1 祝福墙
             div.registry-rsvps#rsvps
